src/test/deca/etapeB/invalid/void_cast.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 13 : cast impossible
// 

{
    int a = 4;
    int b = (void) (a);
}
